--- a/src/ch05/ch05_exercise10.ipynb
+++ b/src/ch05/ch05_exercise10.ipynb
@@ -47,6 +47,24 @@
     "\\end{align}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c61a4c-0e28-4443-896a-1458943bb0ae",
+   "metadata": {},
+   "source": [
+    "# Chapter 5, Exercise 10, Part C\n",
+    "\n",
+    "We see that the period gets smaller as $a$ increases, which means the frequence is greater so you could say the oscillator is getting faster. The period diverges at $0$ and is larger around $0$, meaning the frequency is low and you could say the oscillator is slower. For this particular potential function, the math works out so that period diverges around 0, it behaves kindof like $1/x$ if you take $V(a)$ to be really close to $0$ and work the integral. Then as $a$ gets close to $0$ this blows up. Then the speed of the oscillator in distance/time form travels at $2a/T$ which would decrease rapidly like $2ax$ so the speed is really low."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "554ea12f-ae07-4a85-8c01-b4297937569d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
